--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -152,7 +152,7 @@
   display: none;
   position: absolute;
   top: 10px;
-  left: 44%;
+  right: 8%;
 
   cursor: pointer;
 }
@@ -231,7 +231,7 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
-    color: #ccc;
+    color: rgb(121, 39, 39);
     cursor: move;
     width: 24px;
     height: 24px;
