--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -48,18 +48,18 @@ footer a {
   #logo_diarc {
     display: inline-block;
     width: 70px;
-    margin-left: 44px;
+    margin-top: -9px;
+    margin-left: 9px;
     min-height: 65px;
     background-image: url("logos/diarc.png");
   }
 
   #logo_tmc {
-    min-width: 250px;
+    min-width: 170px;
     background-image: url("logos/tmc.png");
   }
 
   #logo_nmct {
-    margin-right: 20px;
     background-image: url("logos/nmct.png");
   }
 
