--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -25,12 +25,18 @@
       id="logo_tmc"
       (click)="openUrl('https://themightycreatives.com')"
     ></div>
+
+    <div
+      class="logo"
+      id="logo_national"
+      (click)="openUrl('http://www.nbschool.eu')"
+    ></div>
+
     <div
       class="logo"
       id="logo_nmct"
       (click)="openUrl('https://www.svetoslavastoyanova.com/collaboration')"
     ></div>
-
     <div
       class="logo"
       id="logo_bo_yana"
