--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -35,7 +35,7 @@
     <div
       class="logo"
       id="logo_nmct"
-      (click)="openUrl('https://www.svetoslavastoyanova.com/collaboration')"
+      (click)="openUrl('https://www.nmct.eu')"
     ></div>
     <div
       class="logo"
