--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -67,6 +67,7 @@ footer a {
     min-width: 120px;
     min-height: 45px;
     margin-left: 60px;
+    margin-right: 5px;
 
     background-image: url("https://ipos.bg/bo_yana_logo.png");
   }
